--- a/problems/887.super-egg-drop.md
+++ b/problems/887.super-egg-drop.md
@@ -50,7 +50,7 @@
 
 本题也是 vivo 2020 年提前批的一个笔试题。时间一个小时，一共三道题，分别是本题，合并 k 个链表，以及种花问题。
 
-这道题我在很早的时候做过，也写了[题解](https://github.com/azl397985856/leetcode/blob/master/problems/887.super-egg-drop.md "887.super-egg-drop 题解")。现在看来，思路没有讲清楚。没有讲当时的思考过程还原出来，导致大家看的不太明白。今天给大家带来的是 887.super-egg-drop 题解的**重制版**。思路更清晰，讲解更透彻，如果觉得有用，那就转发在看支持一下？OK，我们来看下这道题吧。
+这道题我在很早的时候做过，也写了题解。现在看来，思路没有讲清楚。没有讲当时的思考过程还原出来，导致大家看的不太明白。今天给大家带来的是 887.super-egg-drop 题解的**重制版**。思路更清晰，讲解更透彻，如果觉得有用，那就转发在看支持一下？OK，我们来看下这道题吧。
 
 这道题乍一看很复杂，我们不妨从几个简单的例子入手，尝试打开思路。
 
