--- a/problems/887.super-egg-drop.md
+++ b/problems/887.super-egg-drop.md
@@ -139,16 +139,17 @@ class Solution:
 ```py
 class Solution:
     def superEggDrop(self, K: int, N: int) -> int:
-        for i in range(K + 1):
-            for j in range(N + 1):
-                if i == 1:
-                    dp[i][j] = j
-                if j == 1 or j == 0:
-                    dp[i][j] == j
-                dp[i][j] = j
-                for k in range(1, j + 1):
-                    dp[i][j] = min(dp[i][j], max(dp[i - 1][k - 1] + 1, dp[i][j - k] + 1))
-        return dp[K][N]
+        dp = [[i for _ in range(K+1)] for i in range(N + 1)]
+        for i in range(N + 1):
+            for j in range(1, K + 1):
+                dp[i][j] = i
+                if j == 1:
+                    continue
+                if i == 1 or i == 0:
+                    break
+                for k in range(1, i + 1):
+                    dp[i][j] = min(dp[i][j], max(dp[k - 1][j-1] + 1, dp[i-k][j] + 1))
+        return dp[N][K]
 ```
 
 值得注意的是，在这里内外循环的顺序无关紧要，并且内外循坏的顺序对我们写代码来说复杂程度也是类似的，各位客官可以随意调整内外循环的顺序。比如这样也是可以的：
@@ -156,19 +157,17 @@ class Solution:
 ```py
 class Solution:
     def superEggDrop(self, K: int, N: int) -> int:
-        dp = [[0] * (K + 1) for _ in range(N + 1)]
-
-        for i in range(N + 1):
-            for j in range( K + 1):
-                if j == 1:
-                    dp[i][j] = i
-                if i == 1 or i == 0:
-                    dp[i][j] == i
-                dp[i][j] = i
-                for k in range(1, i + 1):
-                    dp[i][j] = min(dp[i][j], max(dp[k - 1][j - 1] + 1, dp[i - k][j] + 1))
-        return dp[N][K]
-        dp = [[0] * (N + 1) for _ in range(K + 1)]
+        dp = [[i for i in range(N+1)] for _ in range(K + 1)]
+        for i in range(1, K + 1):
+            for j in range(N + 1):
+                dp[i][j] = j
+                if i == 1:
+                    break
+                if j == 1 or j == 0:
+                    continue
+                for k in range(1, j + 1):
+                    dp[i][j] = min(dp[i][j], max(dp[i - 1][k - 1] + 1, dp[i][j - k] + 1))
+        return dp[K][N]
 ```
 
 总结一下，上面的解题方法思路是：
