--- a/problems/887.super-egg-drop.md
+++ b/problems/887.super-egg-drop.md
@@ -1,6 +1,6 @@
 ## 题目地址(887. 鸡蛋掉落)
 
-原题地址：https://leetcode-cn.com/problems/super-egg-drop/
+https://leetcode-cn.com/problems/super-egg-drop/
 
 ## 题目描述
 
@@ -197,81 +197,139 @@ class Solution:
 
 我们只需要返回第一个返回值为 true 的 m 即可。
 
-> 想到这里，我条件发射地想到了二分法。 聪明的小朋友们，你们觉得二分可以么？为什么？欢迎评论区留言讨论。
+对于这种二段性的题目应该想到二分法，如果你没想起来，请先观看我的仓库里的二分专题哦。实际上不二分也完全可以通过此题目，具体参考下方代码区，有实现带二分的和不带二分的。
 
-那么这个神奇的 f 函数怎么实现呢？其实很简单。
+最后剩下一个问题。这个神奇的 f 函数怎么实现呢？其实很简单。
 
 - 摔碎的情况，可以检测的最高楼层是`f(m - 1, k - 1) + 1`。因为碎了嘛，我们多检测了摔碎的这一层。
 - 没有摔碎的情况，可以检测的最高楼层是`f(m - 1, k)`。因为没有碎，也就是说我们啥都没检测出来（对能检测的最高楼层无贡献）。
 
-我们来看下代码：
+能检测的最高楼层就是两者的和，我们来看下代码：
 
 ```py
 class Solution:
     def superEggDrop(self, K: int, N: int) -> int:
+        
+        @cache
         def f(m, k):
             if k == 0 or m == 0: return 0
             return f(m - 1, k - 1) + 1 +  f(m - 1, k)
-        m = 0
-        while f(m, K) < N:
-            m += 1
-        return m
-```
-
-上面的代码可以 AC。我们来顺手优化成迭代式。
-
-```py
-class Solution:
-    def superEggDrop(self, K: int, N: int) -> int:
-        dp = [[0] * (K + 1) for _ in range(N + 1)]
-        m = 0
-        while dp[m][K] < N:
-            m += 1
-            for i in range(1, K + 1):
-                dp[m][i] = dp[m - 1][i - 1] + 1 + dp[m - 1][i]
-        return m
+        l, r = 1, N
+        while l <= r:
+            mid = (l + r) // 2
+            if f(mid, K) >= N:
+                r = mid - 1
+            else:
+                l = mid + 1
+            
+        return l
 ```
 
 ## 代码
 
-代码支持：JavaSCript，Python
+代码支持：Python, CPP, Java, JavaSCript
 
 Python:
 
 ```py
 class Solution:
     def superEggDrop(self, K: int, N: int) -> int:
-        dp = [[0] * (K + 1) for _ in range(N + 1)]
-        m = 0
-        while dp[m][K] < N:
-            m += 1
-            for i in range(1, K + 1):
-                dp[m][i] = dp[m - 1][i - 1] + 1 + dp[m - 1][i]
-        return m
+        
+        @cache
+        def f(m, k):
+            if k == 0 or m == 0: return 0
+            return f(m - 1, k - 1) + 1 +  f(m - 1, k)
+        l, r = 1, N
+        while l <= r:
+            mid = (l + r) // 2
+            if f(mid, K) >= N:
+                r = mid - 1
+            else:
+                l = mid + 1
+            
+        return l
+```
+
+CPP:
+
+```cpp
+#include <vector>
+#include <functional>
+
+class Solution {
+public:
+    int superEggDrop(int K, int N) {
+        std::vector<std::vector<int>> dp(K + 1, std::vector<int>(N + 1, 0));
+        
+        for (int m = 1; m <= N; ++m) {
+            for (int k = 1; k <= K; ++k) {
+                dp[k][m] = dp[k - 1][m - 1] + 1 + dp[k][m - 1];
+                if (dp[k][m] >= N) {
+                    return m;
+                }
+            }
+        }
+        
+        return N; // Fallback, should not reach here
+    }
+};
+
+```
+
+Java:
+
+```java
+import java.util.Arrays;
+
+class Solution {
+    public int superEggDrop(int K, int N) {
+        int[][] dp = new int[K + 1][N + 1];
+        
+        for (int m = 1; m <= N; ++m) {
+            for (int k = 1; k <= K; ++k) {
+                dp[k][m] = dp[k - 1][m - 1] + 1 + dp[k][m - 1];
+                if (dp[k][m] >= N) {
+                    return m;
+                }
+            }
+        }
+        
+        return N; // Fallback, should not reach here
+    }
+}
+
 ```
 
 JavaSCript:
 
 ```js
-var superEggDrop = function (K, N) {
-  // 不选择dp[K][M]的原因是dp[M][K]可以简化操作
-  const dp = Array(N + 1)
-    .fill(0)
-    .map((_) => Array(K + 1).fill(0));
+/**
+ * @param {number} k
+ * @param {number} n
+ * @return {number}
+ */
+var superEggDrop = function superEggDrop(K, N) {
+    const dp = Array.from({ length: K + 1 }, () => Array(N + 1).fill(0));
+    
+    for (let m = 1; m <= N; ++m) {
+        for (let k = 1; k <= K; ++k) {
+            dp[k][m] = dp[k - 1][m - 1] + 1 + dp[k][m - 1];
+            if (dp[k][m] >= N) {
+                return m;
+            }
+        }
+    }
+    
+    return N; // Fallback, should not reach here
+}
 
-  let m = 0;
-  while (dp[m][K] < N) {
-    m++;
-    for (let k = 1; k <= K; ++k) dp[m][k] = dp[m - 1][k - 1] + 1 + dp[m - 1][k];
-  }
-  return m;
-};
+
 ```
 
 **复杂度分析**
 
-- 时间复杂度：$O(m * K)$，其中 m 为答案。
-- 空间复杂度：$O(K * N)$
+- 时间复杂度：$O(m * K * logN)$
+- 空间复杂度：$O(m * K)$
 
 对为什么用加法的同学有疑问的可以看我写的[《对《丢鸡蛋问题》的一点补充》](https://lucifer.ren/blog/2020/08/30/887.super-egg-drop-extension/)。
 
