--- a/problems/887.super-egg-drop.md
+++ b/problems/887.super-egg-drop.md
@@ -197,14 +197,14 @@ class Solution:
 
 我们只需要返回第一个返回值为 true 的 m 即可。
 
-对于这种二段性的题目应该想到二分法，如果你没想起来，请先观看我的仓库里的二分专题哦。实际上不二分也完全可以通过此题目，具体参考下方代码区，有实现带二分的和不带二分的。
+对于这种二段性的题目应该想到二分法，如果你没想起来，请先观看我的仓库里的二分专题哦。实际上不二分也完全可以通过此题目，具体下方代码，有实现带二分的和不带二分的。
 
 最后剩下一个问题。这个神奇的 f 函数怎么实现呢？其实很简单。
 
 - 摔碎的情况，可以检测的最高楼层是`f(m - 1, k - 1) + 1`。因为碎了嘛，我们多检测了摔碎的这一层。
 - 没有摔碎的情况，可以检测的最高楼层是`f(m - 1, k)`。因为没有碎，也就是说我们啥都没检测出来（对能检测的最高楼层无贡献）。
 
-能检测的最高楼层就是两者的和，我们来看下代码：
+能检测的最高楼层就是两者的和，我们来看下二分代码：
 
 ```py
 class Solution:
@@ -225,6 +225,8 @@ class Solution:
         return l
 ```
 
+下面代码区我们实现不带二分的版本。
+
 ## 代码
 
 代码支持：Python, CPP, Java, JavaSCript
@@ -234,20 +236,15 @@ Python:
 ```py
 class Solution:
     def superEggDrop(self, K: int, N: int) -> int:
+        dp = [[0] * (N + 1) for _ in range(K + 1)]
         
-        @cache
-        def f(m, k):
-            if k == 0 or m == 0: return 0
-            return f(m - 1, k - 1) + 1 +  f(m - 1, k)
-        l, r = 1, N
-        while l <= r:
-            mid = (l + r) // 2
-            if f(mid, K) >= N:
-                r = mid - 1
-            else:
-                l = mid + 1
-            
-        return l
+        for m in range(1, N + 1):
+            for k in range(1, K + 1):
+                dp[k][m] = dp[k - 1][m - 1] + 1 + dp[k][m - 1]
+                if dp[k][m] >= N:
+                    return m
+        
+        return N  # Fallback, should not reach here
 ```
 
 CPP:
@@ -328,8 +325,8 @@ var superEggDrop = function superEggDrop(K, N) {
 
 **复杂度分析**
 
-- 时间复杂度：$O(m * K * logN)$
-- 空间复杂度：$O(m * K)$
+- 时间复杂度：$O(N * K)$
+- 空间复杂度：$O(N * K)$
 
 对为什么用加法的同学有疑问的可以看我写的[《对《丢鸡蛋问题》的一点补充》](https://lucifer.ren/blog/2020/08/30/887.super-egg-drop-extension/)。
 
